--- a/topic1/1.1_intro_to_llm_apis.ipynb
+++ b/topic1/1.1_intro_to_llm_apis.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -21,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Nebius-Academy/LLM-Engineering-Essentials/blob/main/topic1/1.1_intro_to_llm_apis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/efimai/LLM-Engineering-Essentials/blob/main/topic1/1.1_intro_to_llm_apis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -31,8 +33,7 @@
         "\n",
         "Course github: [link](https://github.com/Nebius-Academy/LLM-Engineering-Essentials/tree/main)\n",
         "\n",
-        "The course is in development now, with more materials coming soon. [Subscribe to stay updated](https://academy.nebius.com/llm-engineering-essentials/update/)",
-        "\n",
+        "The course is in development now, with more materials coming soon. [Subscribe to stay updated](https://academy.nebius.com/llm-engineering-essentials/update/)\n",
         "# 1.1. Intro to LLM APIs\n",
         "\n",
         "In this notebook, we'll start exploring LLMs and LLM APIs, their capabilities and their failures. After working with it, you'll be able to call APIs of LLMs and Multimodal LLMs such as GPT-4o, Llama-3.1-8B, Qwen2-VL-72B, and many more.\n",
@@ -103,20 +104,24 @@
       "source": [
         "import os\n",
         "\n",
-        "with open(\"nebius_api_key\", \"r\") as file:\n",
-        "    nebius_api_key = file.read().strip()\n",
+        "# with open(\"nebius_api_key\", \"r\") as file:\n",
+        "#     nebius_api_key = file.read().strip()\n",
         "\n",
-        "os.environ[\"NEBIUS_API_KEY\"] = nebius_api_key\n",
+        "# os.environ[\"NEBIUS_API_KEY\"] = nebius_api_key\n",
         "\n",
-        "with open(\"openai_api_key\", \"r\") as file:\n",
-        "    openai_api_key = file.read().strip()\n",
+        "# with open(\"openai_api_key\", \"r\") as file:\n",
+        "#     openai_api_key = file.read().strip()\n",
+        "\n",
+        "from google.colab import userdata\n",
+        "os.environ[\"NEBIUS_API_KEY\"] = userdata.get('nebius_api_key')\n",
+        "openai_api_key = userdata.get('openai_api_key')\n",
         "\n",
         "os.environ[\"OPENAI_API_KEY\"] = openai_api_key"
       ],
       "metadata": {
         "id": "s12tqq_3FNR3"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -178,7 +183,7 @@
         "    base_url=\"https://api.studio.nebius.ai/v1/\",\n",
         "    api_key=os.environ.get(\"NEBIUS_API_KEY\"),\n",
         ")\n",
-        "model = \"meta-llama/Meta-Llama-3.1-70B-Instruct\"\n",
+        "model = \"meta-llama/Llama-3.3-70B-Instruct\"\n",
         "\n",
         "completion = client.chat.completions.create(\n",
         "    model=model,\n",
@@ -202,7 +207,7 @@
       "metadata": {
         "id": "B8G23FVBN0Vc"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -223,56 +228,43 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "458bcded-6168-4ad2-f866-e106264e33bc",
+        "outputId": "a704807e-60bf-4b9f-894f-45ed6dc79c99",
         "id": "4-K4JFIrOARi"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "**Bug Analysis**\n",
+            "# Step-by-step analysis of the problem:\n",
+            "1. **Understanding the QuickSort Algorithm**: The QuickSort algorithm is a divide-and-conquer algorithm that works by selecting a 'pivot' element from the array and partitioning the other elements into two sub-arrays, according to whether they are less than or greater than the pivot. The sub-arrays are then recursively sorted.\n",
+            "2. **Identifying the Bug**: In the given implementation, when creating the `right` list, the condition `x >= pivot` is used. This means that the pivot element itself will be included in the `right` list. However, when recursively calling `quicksort(right)`, the pivot element should not be included because it has already been considered as the pivot, and including it again can lead to incorrect results or an infinite recursion.\n",
+            "3. **Analyzing the Impact**: This bug can cause the function to either not sort the array correctly or to go into an infinite recursion, depending on the input array.\n",
             "\n",
-            "The bug in the provided code is that it uses the same pivot element for the left and right sublists. In QuickSort, the pivot element should not be included in either the left sublist or the right sublist. However, in the given code, the right sublist includes the pivot element because of the condition `x >= pivot`. This can lead to incorrect sorting.\n",
-            "\n",
-            "**Corrected Code**\n",
-            "\n",
-            "Here is the corrected implementation of the QuickSort algorithm:\n",
-            "\n",
+            "# Fixed solution:\n",
             "```python\n",
             "def quicksort(arr):\n",
-            "    \"\"\"\n",
-            "    Sorts an array using the QuickSort algorithm.\n",
-            "\n",
-            "    Args:\n",
-            "        arr (list): The input array to be sorted.\n",
-            "\n",
-            "    Returns:\n",
-            "        list: The sorted array.\n",
-            "    \"\"\"\n",
             "    if len(arr) <= 1:\n",
             "        return arr\n",
             "    pivot = arr[0]\n",
-            "    # Exclude the pivot element from the left sublist\n",
-            "    left = [x for x in arr[1:] if x < pivot]\n",
-            "    # Exclude the pivot element from the right sublist\n",
-            "    right = [x for x in arr[1:] if x >= pivot]\n",
+            "    left = [x for x in arr[1:] if x < pivot]  # Exclude the pivot from the list comprehension\n",
+            "    right = [x for x in arr[1:] if x >= pivot]  # Exclude the pivot from the list comprehension\n",
             "    return quicksort(left) + [pivot] + quicksort(right)\n",
             "```\n",
             "\n",
-            "**Explanation**\n",
+            "# Explanation of changes:\n",
+            "*   **Modified List Comprehensions**: The list comprehensions for `left` and `right` now exclude the first element of `arr` (which is the pivot) by starting the iteration from `arr[1:]`. This ensures that the pivot is not included in either the `left` or `right` list.\n",
+            "*   **Corrected Recursive Calls**: With the pivot excluded from the `left` and `right` lists, the recursive calls to `quicksort(left)` and `quicksort(right)` will now correctly sort the sub-arrays without the pivot element.\n",
             "\n",
-            "*   We start by checking if the length of the array is less than or equal to 1. If it is, we simply return the array as it is already sorted.\n",
-            "*   We select the pivot element as the first element of the array.\n",
-            "*   We create two sublists, `left` and `right`, by iterating over the rest of the array (`arr[1:]`) and comparing each element to the pivot. The `left` sublist contains elements less than the pivot, and the `right` sublist contains elements greater than or equal to the pivot. Note that we use `arr[1:]` to exclude the pivot element from both sublists.\n",
-            "*   Finally, we recursively apply the QuickSort algorithm to the `left` and `right` sublists and concatenate the results with the pivot element in its correct position.\n",
-            "\n",
-            "**Example Use Case**\n",
-            "\n",
+            "# Tests and example uses:\n",
             "```python\n",
-            "arr = [5, 2, 9, 1, 7, 3]\n",
-            "print(quicksort(arr))  # Output: [1, 2, 3, 5, 7, 9]\n",
+            "# Example usage\n",
+            "arr = [5, 2, 9, 1, 7, 3, 6, 8, 4]\n",
+            "sorted_arr = quicksort(arr)\n",
+            "print(sorted_arr)\n",
+            "\n",
+            "# Expected output: [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
             "```\n"
           ]
         }
@@ -295,26 +287,26 @@
     {
       "cell_type": "code",
       "source": [
-        "(completion.usage.prompt_tokens * 0.13 + completion.usage.completion_tokens * 0.5) / (10**6)"
+        "(completion.usage.prompt_tokens * 0.13 + completion.usage.completion_tokens * 0.4) / (10**6)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VhAIuWmXN0YX",
-        "outputId": "5e409f49-4578-4dcf-9825-5f19d7351247"
+        "outputId": "e1a4f2d1-9523-497a-b7a9-4f0d52b86945"
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.00024613"
+              "0.00022238"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 12
         }
       ]
     },
@@ -376,7 +368,7 @@
         "    base_url=\"https://api.studio.nebius.ai/v1/\",\n",
         "    api_key=os.environ.get(\"NEBIUS_API_KEY\"),\n",
         ")\n",
-        "model = \"meta-llama/Meta-Llama-3.1-70B-Instruct\"\n",
+        "model = \"meta-llama/Llama-3.3-70B-Instruct\"\n",
         "\n",
         "messages = [\n",
         "        {\n",
@@ -398,25 +390,25 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 191
+          "height": 105
         },
         "id": "KUqAm02vN0a9",
-        "outputId": "1e028916-5647-41a3-858a-7cccf2cfebcc"
+        "outputId": "333479d1-e099-4804-dba8-57a0588d2ace"
       },
-      "execution_count": 10,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'Both J.R.R. Tolkien and George R.R. Martin are fantasy writing legends in their own right, each with their own unique style and contributions to the genre. It ultimately comes down to personal preference, but I\\'ll try to break down their differences and help you decide.\\n\\n**J.R.R. Tolkien**\\n\\nTolkien is often considered the grandfather of modern fantasy. His Middle-earth stories, particularly \"The Lord of the Rings\" and \"The Hobbit,\" set the standard for epic fantasy and world-building. His works are characterized by:\\n\\n* Richly detailed world-building: Tolkien\\'s creation of Middle-earth is unparalleled, with a deep history, cultures, languages, and geography that transport readers to a fully realized world.\\n* Classic hero\\'s journey: Tolkien\\'s stories follow the traditional hero\\'s journey narrative, with noble heroes and villains, quests, and the battle between good and evil.\\n* Linguistic roots: Tolkien, a philologist, drew upon his love of languages to create authentic-sounding Elvish, Dwarvish, and other tongues, which add depth to his world.\\n* High fantasy: Tolkien\\'s works are often classified as high fantasy, with a focus on mythology, legends, and the struggle between light and darkness.\\n\\n**George R.R. Martin**\\n\\nMartin, on the other hand, is known for his gritty, complex, and realistic fantasy world-building. His \"A Song of Ice and Fire\" series, adapted into the hit TV show \"Game of Thrones,\" showcases:\\n\\n* Darker, grittier realism: Martin\\'s stories are often criticized for their harsh, unromantic portrayal of war, politics, and human nature.\\n* Moral complexity: Martin\\'s characters are multidimensional, with no clear heroes or villains, and motivations that are driven by their own interests and flaws.\\n* Intricate plotting: Martin\\'s storylines are known for their intricate webs of politics, alliances, and betrayals, which keep readers guessing and invested.\\n* Low fantasy: Martin\\'s works are often classified as low fantasy, with a focus on the human aspects of a fantasy world, rather than mythology and magic.\\n\\nSo, who\\'s cooler?\\n\\nIf you enjoy:\\n\\n* Rich world-building and epic quests\\n* Classic hero\\'s journey narratives\\n* A more traditional, good-vs-evil fantasy setting\\n\\nThen Tolkien might be the cool cat for you.\\n\\nIf you prefer:\\n\\n* Gritty, realistic storytelling\\n* Complex moral themes and anti-heroes\\n* Intricate plotting and unexpected twists\\n\\nThen Martin might be your preferred master of fantasy.\\n\\nOf course, both authors are incredibly beloved, and many readers enjoy both Tolkien\\'s and Martin\\'s works for their unique merits. You can\\'t go wrong either way!'"
+              "'Both J.R.R. Tolkien and George R.R. Martin are highly acclaimed fantasy writers, but with distinct styles and contributions to the genre. It ultimately comes down to personal preference.\\n\\n**Tolkien** is often considered the father of modern fantasy. His Middle-earth stories, such as \"The Hobbit\" and \"The Lord of the Rings,\" have had a profound impact on the genre. He\\'s known for his:\\n\\n1. World-building: Tolkien created an incredibly detailed and richly imagined world, with its own languages, histories, and cultures.\\n2. Mythopoeic themes: His stories explore classic mythological and philosophical themes, like the struggle between good and evil, friendship, and the corrupting influence of power.\\n3. Influential legacy: Many fantasy authors, including George R.R. Martin, have been inspired by Tolkien\\'s work.\\n\\n**George R.R. Martin**, on the other hand, is famous for his A Song of Ice and Fire series, which was adapted into the hit TV show Game of Thrones. He\\'s known for his:\\n\\n1. Complex characters: Martin\\'s characters are multidimensional, flawed, and often morally ambiguous, making them feel more realistic and relatable.\\n2. Political intrigue: His stories are full of twists, turns, and unexpected betrayals, keeping readers on the edge of their seats.\\n3. Gritty realism: Martin\\'s world is often darker and more brutal than Tolkien\\'s, with a focus on the harsh realities of war, power struggles, and human nature.\\n\\nSo, who\\'s cooler? Well, that depends on your preferences:\\n\\n* If you enjoy epic quests, detailed world-building, and classic mythological themes, Tolkien might be your cup of tea.\\n* If you prefer complex characters, political intrigue, and a gritty, realistic take on fantasy, Martin might be more to your liking.\\n\\nOf course, there\\'s no need to choose just one! Both authors have made significant contributions to the fantasy genre, and you can appreciate and enjoy their works in their own unique ways.\\n\\nWhich one do you think you might prefer, or do you have a favorite among their works?'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 16
         }
       ]
     },
@@ -457,25 +449,25 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 157
+          "height": 70
         },
-        "outputId": "d021b8b5-fb06-4834-f9e3-6177610670e9",
+        "outputId": "23070baf-4c3a-4578-e275-a8d36a418c32",
         "id": "ovWZSCM5QGZl"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"As a helpful assistant, I don't have personal preferences or opinions, but I can pretend to have a taste for the sake of the conversation.\\n\\nIn that case, I'll choose... Tolkien!\\n\\nThere's something special about the way Tolkien crafted Middle-earth, with its intricate histories, cultures, and languages. His world-building is unparalleled, and his stories have a timeless quality that continues to captivate readers of all ages. I think it's because Tolkien's works are not just about entertainment, but also about exploring the human condition, the nature of good and evil, and the importance of fellowship and friendship.\\n\\nPlus, who can resist the charms of hobbits, elves, dwarves, and the epic quest to destroy the One Ring?\\n\\nBut don't tell Martin fans I said that!\""
+              "'I don\\'t have personal preferences, but I can tell you that many people enjoy **Tolkien** for his richly detailed world-building and mythopoeic themes. His stories have a timeless quality to them, and his influence on the fantasy genre is still widely felt today.\\n\\nPlus, who can resist the charm of Middle-earth, with its hobbits, elves, dwarves, and epic quests? It\\'s a world that has captivated readers and audiences for generations, and its appeal continues to endure.\\n\\nSo, if I had to \"choose\" one, I\\'d say Tolkien is a great choice – but only because I\\'m a large language model, I don\\'t have personal preferences, and I\\'m just acknowledging his significant impact on the fantasy genre!'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 17
         }
       ]
     },
@@ -592,7 +584,7 @@
         "id": "kbAR5TCQSDmA",
         "outputId": "1655d173-de73-45fa-df2f-44b2e664a053"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -657,7 +649,7 @@
         "outputId": "c6930715-8aa5-4cbe-8eb6-6d474b148474",
         "id": "DfHuN5MPST79"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +717,7 @@
         "id": "JJJKKfcQQcyD",
         "outputId": "e6b798b5-e1d4-4a68-9529-8cb8b452ad97"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
